--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./main.css">
     <title>Main Page</title>
 </head>
-<body>
+<body> <!--udhuhdu-->
     <nav class="navbar fixed-top navbar-expand-lg">
         <a class="navbar-brand" href="#">Our Bike Hire Company</a> 
         <button class="navbar-toggler ms-auto" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
