Attached image as .png

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </span>
         </div>
     </nav>
-    <img src="C:\Users\melpi\OneDrive\Documents\GitHub\CFG-Project\_MG_4110-cropped-edited.jpeg" width="100%" height="1600px">
+    <img src="./cyclingImage.png" width="100%" height="1600px">
     <footer class="bg-light">
         <script src="./script.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
